De-hierarchize posts and rename taxonomy
- Taxonomy 'tags' became 'custodians'

--- a/content/posts/2014-02-28-MtGox.md
+++ b/content/posts/2014-02-28-MtGox.md
@@ -1,6 +1,6 @@
 ---
 date: 2014-02-28
-tags: MtGox
+custodians: MtGox
 categories: Custodian
 title: Mt. Gox hacked, losing over $450 million worth of Bitcoin
 ---
