--- a/content/posts/2015-01-04-Bitstamp.md
+++ b/content/posts/2015-01-04-Bitstamp.md
@@ -1,6 +1,6 @@
 ---
 date: 2015-01-04
-tags: Bitstamp
+custodians: Bitstamp
 categories: Custodian
 title: Bitstamp hot wallet hacked for 18,866 BTC due to human error
 ---
