--- a/content/posts/2020-08-31-2gether.md
+++ b/content/posts/2020-08-31-2gether.md
@@ -1,6 +1,6 @@
 ---
 date: 2020-08-31
-tags: 2gether
+custodians: 2gether
 categories: Custodian
 title: 2gether hacked, losing over €1.183 million worth of cryptocurrencies
 ---
