Fix front matter

--- a/content/attacks/posts/2018-02-08-BitGrail.md
+++ b/content/attacks/posts/2018-02-08-BitGrail.md
@@ -2,7 +2,7 @@
 date: February 2018
 custodians: BitGrail cryptocurrency exchange
 categories: Crypto currency attacks, Security breaches
-title: The BitGrail Crypto Hack: Unraveling the $170 Million Incident
+title: "The BitGrail Crypto Hack: Unraveling the $170 Million Incident"
 
 ---
 
