Timeline chapter update

--- a/content/attacks/posts/2022-01-17-Crypto.com.md
+++ b/content/attacks/posts/2022-01-17-Crypto.com.md
@@ -7,7 +7,7 @@ title: Crypto.com Confirms $34M Hack
 
 ## Summary
 
-According to the announcement, an attacker found a way to approve transactions without the two-factor authentication control being inputted by account holders. This resulted in 483 Crypto.com users losing funds from their accounts. The exchange reaffirmed comments made by the firm’s CEO, Kris Marszalek, that any accounts found to be impacted were fully restored, resulting in no loss of funds for users.
+According to the announcement, an attacker found a way to approve transactions without the two-factor authentication control being inputted by account holders. This resulted in 483 Crypto.com users losing funds from their accounts. The exchange reaffirmed comments made by the firmâ€™s CEO, Kris Marszalek, that any accounts found to be impacted were fully restored, resulting in no loss of funds for users.
 
 ## Attackers
 
@@ -15,16 +15,16 @@ The identity of the attackers remained unknown.
 
 ## Losses
 
-Attacker drained 4,836.26 ETH, 443.93 BTC, and approximately $66,200 of other currencies from its users’ accounts. The stolen funds total approximately $34.4 million.
+Attacker drained 4,836.26 ETH, 443.93 BTC, and approximately $66,200 of other currencies from its usersâ€™ accounts. The stolen funds total approximately $34.4 million.
 
 ## Timeline
 
-On Monday, Jan. 17, at approximately 00:46 UTC, the exchange’s risk monitoring systems detected unauthorized activity on a small number of user accounts.
+On Monday, [Jan. 17](https://twitter.com/cryptocom/status/1482936866001207296), at 04:44 UTC, the company's twitter account announced unauthorized activity on a small number of user accounts. All withdrawals were paused for investigation. Infrastructure was up and running again in under 14 hours. Crypto.com CEO Kris Marszalek [tweeted](https://twitter.com/kris/status/1483277350683185155) confirmation that no customer funds had been lost. All users [asked](https://twitter.com/cryptocom/status/1483050866894868484) to sign back into their accounts and reset 2FA
 
 ## Security Failure Causes
 
-While Crypto.com has confirmed the reports of a hack from several analysts and blockchain security firms, the exchange did not explain how the hacker gained access to users’ accounts and bypassed their two-factor authentication.
-The undisclosed security breach that led to the Crypto.com hack comes less than three months after the exchange completed a Service Organization Control 2 Audit. The audit was conducted by consulting firm Deloitte and affirmed that Crypto.com’s information security practices, policies, procedures, and operations meet sufficient SOC2 standards. 
+While Crypto.com has confirmed the reports of a hack from several analysts and blockchain security firms, the exchange did not explain how the hacker gained access to usersâ€™ accounts and bypassed their two-factor authentication.
+The undisclosed security breach that led to the Crypto.com hack comes less than three months after the exchange completed a Service Organization Control 2 Audit. The audit was conducted by consulting firm Deloitte and affirmed that Crypto.comâ€™s information security practices, policies, procedures, and operations meet sufficient SOC2 standards. 
 
 ## Lessons Learned
 
