add mention of the Certic article about swapping the stolen for USDC and SOL - for quality check

--- a/content/attacks/posts/2023-02-02-Wormhole.md
+++ b/content/attacks/posts/2023-02-02-Wormhole.md
@@ -7,7 +7,7 @@ title: Wormhole Hack: Code Vulnerability Has Led to $325 Million Stolen
 
 ## Summary
 
-On February 3, 2022, Wormhole, a DeFi platform that helps move tokens and NFTs across different blockchains (Ethereum, Solana, Binance Smart Chain, etc.), was hacked. The attacker managed to bypass the Wormhole verification with a spoofed sysvar account to mint 120,000 wrapped ETH (wETH) tokens on the Solana network. The invalid 93,750 wETH tokens were used to redeem them back into equivalent ETH tokens on the Ethereum network. The rest of the invalid tokens were swapped for USDC and SOL tokens. According to Forbes, the attack caused a 10% drop in the value of the Solana cryptocurrency in the aftermath of the hack. But the worst-case scenario — a bank run and crash of wETH value — did not happen since Jump Trading, Wormhole’s parent company and a major player in the Solana ecosystem, stepped up and supplied Ether to replace what was stolen, after attempts to pay the hacker a $10 million bounty in return for the stolen funds were ignored.
+On February 3, 2022, Wormhole, a DeFi platform that helps move tokens and NFTs across different blockchains (Ethereum, Solana, Binance Smart Chain, etc.), was hacked. The attacker managed to bypass the Wormhole verification with a spoofed sysvar account to mint 120,000 wrapped ETH (wETH) tokens on the Solana network. The invalid 93,750 wETH tokens were used to redeem them back into equivalent ETH tokens on the Ethereum network. The rest of the invalid tokens were swapped for USDC and SOL tokens, as it was shown in the Certic incident analysis report. According to Forbes, the attack caused a 10% drop in the value of the Solana cryptocurrency in the aftermath of the hack. But the worst-case scenario — a bank run and crash of wETH value — did not happen since Jump Trading, Wormhole’s parent company and a major player in the Solana ecosystem, stepped up and supplied Ether to replace what was stolen, after attempts to pay the hacker a $10 million bounty in return for the stolen funds were ignored.
 
 ## Attackers
 
