--- a/content/attacks/posts/2023-02-02-Wormhole.md
+++ b/content/attacks/posts/2023-02-02-Wormhole.md
@@ -7,15 +7,17 @@ title: Wormhole Hack: Code Vulnerability Has Led to $325 Million Stolen
 
 ## Summary
 
-On February 3, 2022, Wormhole, a DeFi platform that helps move tokens and NFTs across different blockchains (Ethereum, Solana, Binance Smart Chain, etc.), was hacked. The attacker managed to bypass the Wormhole verification with a spoofed sysvar account to mint 120,000 wrapped ETH (wETH) tokens on the Solana network. The invalid 93,750 wETH tokens were used to redeem them back into equivalent ETH tokens on the Ethereum network. The rest of the invalid tokens were swapped for USDC and SOL tokens, as it was shown in the Certic incident analysis report. According to Forbes, the attack caused a 10% drop in the value of the Solana cryptocurrency in the aftermath of the hack. But the worst-case scenario — a bank run and crash of wETH value — did not happen since Jump Trading, Wormhole’s parent company and a major player in the Solana ecosystem, stepped up and supplied Ether to replace what was stolen, after attempts to pay the hacker a $10 million bounty in return for the stolen funds were ignored.
+On February 3, 2022, Wormhole, a DeFi platform that helps move tokens and NFTs across different blockchains (Ethereum, Solana, Binance Smart Chain, etc.), was hacked. The attacker managed to bypass the Wormhole verification with a spoofed sysvar account to mint 120,000 wrapped ETH (wETH) tokens on the Solana network. [The invalid 93,750 wETH tokens were used to redeem them back into equivalent ETH tokens](https://www.linkedin.com/pulse/320-million-wormhole-hack-explained-giap-nguyen/) on the Ethereum network. The rest of the invalid tokens were swapped for USDC and SOL tokens, as it was shown in the Certic incident analysis report. According to Forbes, [the attack caused a 10% drop in the value of the Solana cryptocurrency](https://www.forbes.com/sites/billybambrough/2022/02/03/crypto-price-alert-ethereum-rival-solana-suddenly-in-free-fall-after-huge-325-million-hack/?sh=3001422c4bb5) in the aftermath of the hack. But the worst-case scenario — a bank run and crash of wETH value — did not happen since Jump Trading, Wormhole’s parent company and a major player in the Solana ecosystem, stepped up and supplied Ether to replace what was stolen, after attempts to pay the hacker a $10 million bounty in return for the stolen funds were ignored.
 
 ## Attackers
 
-The attackers remain unidentified. The hacker's account: CxegPrfn2ge5dNiQberUrQJkHCcimeR4VXkeawcFBBka and wallet: 0x629e7Da20197a5429d30da36E77d06CdF796b71A.
+The attackers remain unidentified. [The hacker's account: CxegPrfn2ge5dNiQberUrQJkHCcimeR4VXkeawcFBBka and wallet: 0x629e7Da20197a5429d30da36E77d06CdF796b71A](https://www.certik.com/resources/blog/1kDYgyBcisoD2EqiBpHE5l-wormhole-bridge-exploit-incident-analysis).
 
 ## Losses
 
-The attacker minted 120,000 wETH — a wrapped Ethereum equivalent on the Solana blockchain — which was equal to $325 million at the time of the theft, making it the largest attack on Solana.
+The attacker minted 120,000 wETH — a wrapped Ethereum equivalent on the Solana blockchain — which was equal to $325 million at the time of the theft, making it [the largest attack on Solana](https://www.cnbctv18.com/cryptocurrency/blockchain-bridge-wormhole-loses-nearly-320-million-in-apparent-crypto-hack-12343952.htm). 
+
+On 21st February 2023, Jump Crypto, the crypto arm of Jump Trading, in collaboration with Oasis, has [successfully recovered stolen funds](https://blockworks.co/news/jump-crypto-wormhole-hack-recovery) in a counter-exploit by [utilizing the Oasis contract and gaining control of the perpetrator's vaults](https://www.blockworksresearch.com/research/we-do-a-little-counter-exploit), resulting in a return of approximately $140 million. The intervention was made possible through a [court order received](https://blog.oasis.app/statement-regarding-the-transactions-from-the-oasis-multisig-on-21st-feb-2023/) by Oasis from the High Court of England and Wales, which mandated the retrieval of assets associated with the wallet address involved in the Wormhole exploit.
 
 ## Timeline:
 
@@ -23,10 +25,8 @@ The attacker minted 120,000 wETH — a wrapped Ethereum equivalent on the Solana
 - **February 3, 2022, 2:42 AM:** Wormhole announced "maintenance" in Twitter while investigating the exploit. 
 - **February 3, 2022, 4:25 AM:** The Wormhole Twitter confirmed the breach and the amount stolen, which was 120k wETH.
 - **February 3, 2022, 6:41 AM:** Wormhole twitted that the vulnerability has been patched.
+- **February 21, 2023:** Jump Crypto, Wormhole’s parent company, retrieved $140 million via the counter-exploit of the perpetrator's vaults.
 
 ## Security Failure Causes
 
-The cause of the hack was a bug in the signature verification code, which the intruder tracked by the commit in the Wormhole’s Github repository. This program did not properly check if the signature verification was performed by a whitelisted address, and the team did not have time to deploy the new version at the time of the attack. The attacker substituted the system address with their own program address, bypassing signature verification.
-
-## Additional Details
-On 21st February 2023, Jump Crypto, the Chicago-based crypto arm of Jump Trading, has reportedly performed a successful counter-exploit to recover the stolen funds from the perpetrator. They did it in collaboration with Oasis, an Ethereum dapp, where the exploiter opened two vaults. Jump and Oasis exploited the Oasis contract, by “upgrading” the contract using the AutomationExecutor proxy to gain control of the exploiter's vaults, resulting in a net return of around $140 million. The intervention was made possible through a court order received by Oasis from the High Court of England and Wales, which mandated the retrieval of assets associated with the wallet address involved in the Wormhole exploit.
+The cause of the hack was a bug in the signature verification code, which the intruder possibly [tracked by the commit in the Wormhole’s Github repository](https://extropy-io.medium.com/solanas-wormhole-hack-post-mortem-analysis-3b68b9e88e13). This program did not properly check if the signature verification was performed by a whitelisted address, and [the team did not have time to deploy the new version](https://extropy-io.medium.com/solanas-wormhole-hack-post-mortem-analysis-3b68b9e88e13) at the time of the attack. The attacker substituted the system address with their own program address, bypassing signature verification.
