fix bitgrail header

--- a/content/attacks/posts/2018-02-08-BitGrail.md
+++ b/content/attacks/posts/2018-02-08-BitGrail.md
@@ -1,8 +1,8 @@
 ---
 date: 2018-02-08
-custodians: BitGrail cryptocurrency exchange
-categories: Crypto currency attacks, Security breaches
-title: "The BitGrail Crypto Hack: Unraveling the $170 Million Incident"
+custodians: BitGrail
+categories: Custodian
+title: "BitGrail Hack Results in $170 Million Loss"
 
 ---
 
