Remap incidents taxonomies
With this change instead of having global categories & custodians we
have local categories & custodians.

--- a/content/attacks/posts/2018-04-04-Verge.md
+++ b/content/attacks/posts/2018-04-04-Verge.md
@@ -1,8 +1,8 @@
 ---
 date: 2018-04-04
-categories:
-- 51%
-- Protocol exploit
+attacks/posts/categories:
+    - 51%
+    - Protocol exploit
 title: Verge suffers a 51% attack in April 2018
 ---
 
