--- a/content/attacks/posts/2022-02-02-Wormhole.md
+++ b/content/attacks/posts/2022-02-02-Wormhole.md
@@ -1,6 +1,6 @@
 ---
 date: 2022-02-02
-categories: DeFi
+attacks/posts/categories: DeFi
 title: "Wormhole Hack: Code Vulnerability Has Led to $325 Million Stolen"
 ---
 
