--- a/content/attacks/posts/2023-05-29-Qubit.md
+++ b/content/attacks/posts/2023-05-29-Qubit.md
@@ -1,6 +1,6 @@
 ---
 date: 2022-03-23
-categories: Bridge Hack
+attacks/posts/categories: Bridge Hack
 title: "Hackers Breach Qubit Finance Platform, Stealing $80 Million"
 ---
 
