--- a/content/attacks/posts/2019-07-12-BITpoint.md
+++ b/content/attacks/posts/2019-07-12-BITpoint.md
@@ -1,13 +1,12 @@
 ---
-date: 2019-07-12
-custodians: BITPoint
-categories: Custodian
-title: BITPoint hacked - $28 million stolen in 2019
+Date: 2019-07-12
+Categories: Custodian
+Title: "BITPoint hacked - $28 million stolen in 2019"
 ---
 
 ## Summary
 
-In July 2019, BITPoint, a Japanese cryptocurrency exchange ([source: bloomberg.com](https://www.bloomberg.com/news/articles/2019-07-12/japan-s-bitpoint-loses-32m-in-lastest-crypto-exchange-hack)), suffered a security breach in which hackers gained unauthorized access to the exchange's hot wallets, resulting in the theft of approximately $32 million worth of cryptocurrency. The attack was attributed to the theft of private keys associated with the hot wallets.
+In July 2019, BITPoint, a Japanese cryptocurrency exchange, [suffered a security breach](https://www.bloomberg.com/news/articles/2019-07-12/japan-s-bitpoint-loses-32m-in-lastest-crypto-exchange-hack) in which hackers gained unauthorized access to the exchange's hot wallets, resulting in the theft of approximately $28 million worth of cryptocurrency. The attack was attributed to the theft of private keys associated with the hot wallets.
 
 ## Attackers
 
@@ -19,10 +18,10 @@ The total amount of losses from the BITPoint hack was approximately $28 million 
 
 ## Timeline
 
-- **July 11-12, 2019:** BITPoint detects an error in the balances of its hot wallets and suspends all trading on its platform. ([source: coindeskjapan.com](https://www.coindeskjapan.com/14385/))
-- **July 12, 2019:** BITPointt announces that it has lost approximately ~$32 million worth of customer funds in a security breach. ([source: coindesk.com](https://www.coindesk.com/markets/2019/07/12/bitpoint-exchange-hacked-for-32-million-in-cryptocurrency/))
-- **July 17, 2019:** BITPoint is revealing that the total amount lost was less than expected, as the total amount appears to be about $28 million. And announced that they would be reimbursing users who lost their funds. ([source: coingeek.com](https://coingeek.com/bitpoint-to-repay-users-following-attack/))
-- **August 6, 2019:** BITPoint re-opened trading services on after a successful safety assessment of the platform's wallet. ([source: cryptonewsz.com](https://www.cryptonewsz.com/bitpoint-japanese-crypto-exchange-re-opens-for-trade-services-after-28-million-hack-in-mid-of-july/))
+- **July 11-12, 2019:** BITPoint [detects](https://www.coindeskjapan.com/14385/) an error in the balances of its hot wallets and suspends all trading on its platform.  
+- **July 12, 2019:** BITPointt [announces](https://www.coindesk.com/markets/2019/07/12/bitpoint-exchange-hacked-for-32-million-in-cryptocurrency/) that it has lost approximately ~$32 million worth of customer funds in a security breach.  
+- **July 17, 2019:** BITPoint is revealing that the total amount lost was less than expected, as the total amount appears to be about [$28 million](https://coingeek.com/bitpoint-to-repay-users-following-attack/). And announced that they would be reimbursing users who lost their funds.  
+- **August 6, 2019:** BITPoint [re-opened](https://www.cryptonewsz.com/bitpoint-japanese-crypto-exchange-re-opens-for-trade-services-after-28-million-hack-in-mid-of-july/) trading services on after a successful safety assessment of the platform's wallet.  
 
 ## Security Failure Causes
 
