--- a/content/attacks/posts/2016-08-23-Krypton.md
+++ b/content/attacks/posts/2016-08-23-Krypton.md
@@ -2,7 +2,7 @@
 date: 2016-08-23
 custodians: Krypton
 categories: 51%
-title: Krypton (KR) suffers a 51% attack in August 2016
+title: "Krypton (KR) suffers a 51% attack in August 2016"
 ---
 
 ## Summary
@@ -11,7 +11,7 @@ Krypton, an Ethereum-based blockchain, experienced a 51% attack in August 2016. 
 
 ## Attackers
 
-The identity of the attackers behind the Krypton 51% attack remains unknown. It is presumed that they were able to amass a significant amount of mining power, which was used to take control of the Krypton network.
+The identity of the attackers remains unknown. 
 
 ## Losses
 
@@ -21,7 +21,6 @@ It was reported that the attackers managed to steal approximately 21,465 KR toke
 
 - **August 23, 2016:** The Krypton network experiences a sudden spike in its hash rate, and the 51% attack begins.
 - **August 24, 2016:** The Krypton team becomes aware of the attack and starts to investigate the incident.
-- **Late August, 2016:** Krypton developers work on countermeasures to prevent similar attacks in the future.
 
 ## Security Failure Causes
 
