Update and rename 2016-08-27-Shift to 2016-08-27-Shift.md

--- a/content/attacks/posts/2016-08-27-Shift.md
+++ b/content/attacks/posts/2016-08-27-Shift.md
@@ -15,13 +15,12 @@ The identities of the attackers remain unknown.
 
 ## Losses
 
-The exact amount of losses in the Shift 51% attack is not clear. However, such attacks usually result in financial losses as attackers can double-spend tokens, which affects the integrity and trust of the network.
+The exact amount of losses in the Shift 51% attack is not clear. 
 
 ## Timeline
 
 - **August 27, 2016:** The Shift network witnesses an unexpected surge in hash rate, indicating a possible attack.
 - **August 28, 2016:** It becomes evident that the Shift network is under a 51% attack, with the attackers having control over the majority of the network's mining power.
-- **Late August 2016:** The Shift team and community take steps to mitigate the effects of the attack and implement measures to bolster network security.
 
 ## Security Failure Causes
 
