Fix taxonomies for newer content

--- a/content/attacks/posts/2019-07-12-BITpoint.md
+++ b/content/attacks/posts/2019-07-12-BITpoint.md
@@ -1,6 +1,6 @@
 ---
 date: 2019-07-12
-categories: Custodian
+attacks/posts/categories: Custodian
 title: "BITPoint hacked - $28 million stolen"
 ---
 
