--- a/content/attacks/posts/2021-12-05-Polygon.md
+++ b/content/attacks/posts/2021-12-05-Polygon.md
@@ -1,6 +1,6 @@
 ---
 date: 2021-12-05
-categories: Protocol exploit
+attacks/posts/categories: Protocol exploit
 title: "Polygon hacked for over 800,000 MATIC"
 ---
 
