--- a/content/attacks/posts/2022-03-23-Ronin.md
+++ b/content/attacks/posts/2022-03-23-Ronin.md
@@ -1,7 +1,6 @@
 ---
 date: 2022-03-23
-custodians: Sky Mavis
-categories: Consensus
+categories: 51%
 title: Ronin Network suffers 51% attack, $625 million stolen
 ---
 
