removed the unnecessary

--- a/content/attacks/posts/2020-09-25-KuCoin.md
+++ b/content/attacks/posts/2020-09-25-KuCoin.md
@@ -38,9 +38,8 @@ A North Korean hacker crew called [Lazarus Group has been accused](https://www.f
 
 ## Timeline:
 
-- **September 26, 2020, 2:51 AM (UTC+8):** [KuCoin received an alert from the risk management system](https://www.kucoin.com/ru/news/en-kucoin-ceo-livestream-recap-latest-updates-about-security-incident) for the first time.  A few more abnormal transactions for ETH and other ERC-20 took place soon, all from the same ETH wallet address. The remaining balance of KuCoin's hot wallets began to decline abnormally. 
-- **September 26, 2020, 3:20 AM (UTC+8):** The KuCoin operation team urgently closed the server of the wallet. There were still cases of abnormal transactions after the shutdown. 
-- **September 26, 2020, 4:20 AM (UTC+8):** The KuCoin wallet team started to transfer the remaining assets from the hot wallet to cold storage. KuCoin started to investigate the incident.
+- **September 26, 2020, 2:51 AM (UTC+8):** [KuCoin received an alert from the risk management system](https://www.kucoin.com/ru/news/en-kucoin-ceo-livestream-recap-latest-updates-about-security-incident) for the first time.  A few more abnormal transactions for ETH and other ERC-20 took place soon, all from the same ETH wallet address. 
+- **September 26, 2020, 4:20 AM (UTC+8):** The KuCoin operation team closed the server of the wallet. The KuCoin wallet team started to transfer the remaining assets from the hot wallet to cold storage. KuCoin started to investigate the incident.
 - **September 26, 2020, 4:50 AM (UTC+8):** The KuCoin wallet team transferred most of the remaining assets from the hot wallet to cold storage.
 - **September 26, 2020, 10:41 AM (UTC+8):** The KuCoin team released [the official announcement about the security incident](https://www.kucoin.com/ru/news/en-kucoin-security-incident-update).
 - **September 26, 2020, 1:56 PM (UTC+8):** KuCoin offered rewards of up to $100,000 to anyone who could provide valid information to them regarding the incident.
