added quotes to the categories

--- a/content/attacks/posts/2019-11-27-Upbit.md
+++ b/content/attacks/posts/2019-11-27-Upbit.md
@@ -1,7 +1,7 @@
 ---
 date: 2019-11-27
 custodians: Upbit
-categories: Custodian
+categories: "Custodian"
 title: "Upbit Loses $49 Million in Cyberattack"
 ---
 
