Wormhole update - fixed plagiarism and writing issues

--- a/content/attacks/posts/2022-02-02-Wormhole.md
+++ b/content/attacks/posts/2022-02-02-Wormhole.md
@@ -1,32 +1,32 @@
 ---
 date: 2022-02-02
 custodians: Wormhole
-categories: DeFi
+categories: "DeFi"
 title: "Wormhole Hack: Code Vulnerability Has Led to $325 Million Stolen"
 ---
 
 ## Summary
 
-On February 3, 2022, Wormhole, a DeFi platform that helps move tokens and NFTs across different blockchains (Ethereum, Solana, Binance Smart Chain, etc.), was hacked. The attacker managed to bypass the Wormhole verification with a spoofed sysvar account to mint 120,000 wrapped ETH (wETH) tokens on the Solana network. [The invalid 93,750 wETH tokens were used to redeem them back into equivalent ETH tokens](https://www.linkedin.com/pulse/320-million-wormhole-hack-explained-giap-nguyen/) on the Ethereum network. The rest of the invalid tokens were swapped for USDC and SOL tokens, as it was shown in the Certic incident analysis report. According to Forbes, [the attack caused a 10% drop in the value of the Solana cryptocurrency](https://www.forbes.com/sites/billybambrough/2022/02/03/crypto-price-alert-ethereum-rival-solana-suddenly-in-free-fall-after-huge-325-million-hack/?sh=3001422c4bb5) in the aftermath of the hack. But the worst-case scenario — a bank run and crash of wETH value — did not happen since Jump Trading, Wormhole’s parent company and a major player in the Solana ecosystem, stepped up and supplied Ether to replace what was stolen, after attempts to pay the hacker a $10 million bounty in return for the stolen funds were ignored.
+On February 3, 2022, a security breach occurred on Wormhole, a DeFi platform designed to facilitate the transfer of tokens and NFTs across various blockchains such as Ethereum, Solana, and Binance Smart Chain. The attacker successfully exploited a vulnerability by utilizing a spoofed sysvar account, enabling them to mint 120,000 wrapped ETH (wETH) tokens on the Solana network. These tokens were later deemed invalid. Subsequently, [the attacker redeemed 93,750 wETH tokens for an equivalent value of ETH tokens](https://www.linkedin.com/pulse/320-million-wormhole-hack-explained-giap-nguyen/) on the Ethereum network. Additionally, the remaining invalid tokens were exchanged for USDC and SOL tokens, as indicated in the Certic incident analysis report. As a result of the breach, the Solana cryptocurrency experienced a 10% decline in value, [according to Forbes](https://www.forbes.com/sites/billybambrough/2022/02/03/crypto-price-alert-ethereum-rival-solana-suddenly-in-free-fall-after-huge-325-million-hack/?sh=3001422c4bb5). Despite concerns of a potential collapse and devaluation of wETH, Jump Trading, the parent company of Wormhole and a significant participant in the Solana ecosystem, intervened by providing replacement Ether for the stolen funds. Notably, attempts to negotiate with the hacker by offering a $10 million bounty in exchange for the return of the stolen funds were unsuccessful.
 
 ## Attackers
 
-The attackers remain unidentified. [The hacker's account: CxegPrfn2ge5dNiQberUrQJkHCcimeR4VXkeawcFBBka and wallet: 0x629e7Da20197a5429d30da36E77d06CdF796b71A](https://www.certik.com/resources/blog/1kDYgyBcisoD2EqiBpHE5l-wormhole-bridge-exploit-incident-analysis).
+The identities of the attackers involved in the incident remain unknown. [The hacker's account: CxegPrfn2ge5dNiQberUrQJkHCcimeR4VXkeawcFBBka and wallet: 0x629e7Da20197a5429d30da36E77d06CdF796b71A](https://www.certik.com/resources/blog/1kDYgyBcisoD2EqiBpHE5l-wormhole-bridge-exploit-incident-analysis).
 
 ## Losses
 
-The attacker minted 120,000 wETH — a wrapped Ethereum equivalent on the Solana blockchain — which was equal to $325 million at the time of the theft, making it [the largest attack on Solana](https://www.cnbctv18.com/cryptocurrency/blockchain-bridge-wormhole-loses-nearly-320-million-in-apparent-crypto-hack-12343952.htm). 
+The attacker orchestrated a significant theft by minting 120,000 wETH, which represented approximately $325 million in value at the time of the incident. This incident stands as [the largest attack ever witnessed on the Solana blockchain](https://www.cnbctv18.com/cryptocurrency/blockchain-bridge-wormhole-loses-nearly-320-million-in-apparent-crypto-hack-12343952.htm). 
 
-On 21st February 2023, Jump Crypto, the crypto arm of Jump Trading, in collaboration with Oasis, has [successfully recovered stolen funds](https://blockworks.co/news/jump-crypto-wormhole-hack-recovery) in a counter-exploit by [utilizing the Oasis contract and gaining control of the perpetrator's vaults](https://www.blockworksresearch.com/research/we-do-a-little-counter-exploit), resulting in a return of approximately $140 million. The intervention was made possible through a [court order received](https://blog.oasis.app/statement-regarding-the-transactions-from-the-oasis-multisig-on-21st-feb-2023/) by Oasis from the High Court of England and Wales, which mandated the retrieval of assets associated with the wallet address involved in the Wormhole exploit.
+On February 21, 2023, Jump Crypto, the cryptocurrency division of Jump Trading, joined forces with Oasis to [successfully recover a portion of the stolen funds](https://blockworks.co/news/jump-crypto-wormhole-hack-recovery). Through a counter-exploit strategy, they [leveraged the Oasis contract to gain control over the perpetrator's vaults](https://www.blockworksresearch.com/research/we-do-a-little-counter-exploit). As a result, approximately $140 million was retrieved. This remarkable intervention was made possible by obtaining a [court order from the High Court of England and Wales](https://blog.oasis.app/statement-regarding-the-transactions-from-the-oasis-multisig-on-21st-feb-2023/), which compelled Oasis to retrieve the assets associated with the wallet address involved in the Wormhole exploit.
 
 ## Timeline:
 
-- **February 2, 2022, 8:15 PM:** Soon after the attack, the Wormhole proposed the hacker a whitehat agreement with a $10 million bounty through the text in a transaction. The hacker didn’t make any contact.
-- **February 3, 2022, 2:42 AM:** Wormhole announced "maintenance" in Twitter while investigating the exploit. 
-- **February 3, 2022, 4:25 AM:** The Wormhole Twitter confirmed the breach and the amount stolen, which was 120k wETH.
-- **February 3, 2022, 6:41 AM:** Wormhole twitted that the vulnerability has been patched.
-- **February 21, 2023:** Jump Crypto, Wormhole’s parent company, retrieved $140 million via the counter-exploit of the perpetrator's vaults.
+- **February 2, 2022, 8:15 PM:** Following the attack, Wormhole reached out to the hacker with a whitehat agreement, offering a $10 million bounty through a transaction message. However, the hacker did not respond.
+- **February 3, 2022, 2:42 AM:** Wormhole announced on Twitter that they were undergoing "maintenance" while investigating the exploit.
+- **February 3, 2022, 4:25 AM:** The official Wormhole Twitter account confirmed the security breach and the specific amount stolen, which totaled 120,000 wETH.
+- **February 3, 2022, 6:41 AM:** In a subsequent tweet, Wormhole announced that the vulnerability had been patched, resolving the issue.
+- **February 21, 2023:** Jump Crypto, the parent company of Wormhole, successfully retrieved $140 million through a counter-exploit, gaining control over the perpetrator's vaults.
 
 ## Security Failure Causes
 
-The cause of the hack was a bug in the signature verification code, which the intruder possibly [tracked by the commit in the Wormhole’s Github repository](https://extropy-io.medium.com/solanas-wormhole-hack-post-mortem-analysis-3b68b9e88e13). This program did not properly check if the signature verification was performed by a whitelisted address, and [the team did not have time to deploy the new version](https://extropy-io.medium.com/solanas-wormhole-hack-post-mortem-analysis-3b68b9e88e13) at the time of the attack. The attacker substituted the system address with their own program address, bypassing signature verification.
+The hack was attributed to a bug in the signature verification code, which the intruder potentially discovered by [examining the commit history in Wormhole's Github repository](https://extropy-io.medium.com/solanas-wormhole-hack-post-mortem-analysis-3b68b9e88e13). This flaw allowed the attacker to circumvent the signature verification process as it failed to properly validate whether the verification came from a whitelisted address. Unfortunately, [the team was unable to deploy the updated version in time](https://extropy-io.medium.com/solanas-wormhole-hack-post-mortem-analysis-3b68b9e88e13) to prevent the attack, enabling the attacker to substitute their own program address for the system address and bypass the signature verification mechanism.
