--- a/content/attacks/posts/2018-09-14-Zaif.md
+++ b/content/attacks/posts/2018-09-14-Zaif.md
@@ -14,7 +14,7 @@ The identity of the attackers has not been publicly disclosed. The investigation
 
 ## Losses
 
-The total losses is $60 million worth of cryptocurrency including:
+The total losses are $60 million worth of cryptocurrency, including:
 - 5.966 **BTC**(~ $38 million),
 - undisclosed amount of **BCH** (~ $550 per coin) and **MONA** (~ $1.1 per coin).
 
