1. Added two source links; 2. Made a review on the every bot's claim

--- a/content/attacks/posts/2016-08-02-Bitfinex.md
+++ b/content/attacks/posts/2016-08-02-Bitfinex.md
@@ -7,15 +7,15 @@ title: "Bitfinex Hack Led To 119,756 Bitcoin Stolen"
 
 ## Summary
 
-On August 2, 2016, Bitfinex, a prominent cryptocurrency exchange, experienced a security breach. A single wallet received 2,072 approved transactions from users' segregated wallets. During the attack, approxiamtely 120,000 bitcoins were stolen, with an estimated value of US$72 million at the time. Shortly after the incident, the trading price of Bitcoin experienced a 20% decline — from $600 to $400, resulting in the value of the stolen Bitcoin dropping to almost US$58 million. Upon being alerted about the breach, Bitfinex immediately ceased all Bitcoin withdrawals and trading operations and announced its active pursuit to trace and apprehend the perpetrators responsible for the hack in collaboration with global law enforcement agencies and other private sector actors. All exchange customers, regardless of whether their accounts were compromised, encountered a 36% reduction in their account balances and received BFX tokens corresponding to their losses. Despite implementing BitGo's multiple-signature security system to safeguard the funds, the hack still occurred.
+On August 2, 2016, Bitfinex, a prominent cryptocurrency exchange, experienced a security breach. A single wallet received 2,072 approved transactions from users' segregated wallets. During the attack, approxiamtely 120,000 bitcoins were stolen, with an estimated value of US$72 million at the time. Shortly after the incident, the trading price of Bitcoin experienced a [20% decline](https://www.coindesk.com/markets/2016/08/02/bitcoin-drops-nearly-20-as-exchange-hack-amplifies-price-decline/) — from $600 to $400, resulting in the value of the stolen Bitcoin dropping to almost US$58 million. Upon being alerted about the breach, Bitfinex immediately ceased all Bitcoin withdrawals and trading operations and announced its active pursuit to trace and apprehend the perpetrators responsible for the hack in collaboration with global law enforcement agencies and other private sector actors. All exchange customers, regardless of whether their accounts were compromised, encountered a 36% reduction in their account balances and received BFX tokens corresponding to their losses. Despite implementing [BitGo's multiple-signature security system](https://en.wikipedia.org/wiki/2016_Bitfinex_hack) to safeguard the funds, the hack still occurred.
 
 In February 2022, the US government successfully recovered and seized a portion of the stolen bitcoins, valued at US$3.6 billion at the time. This was achieved by decrypting a file that contained addresses and private keys linked to the stolen funds.
 
 ## Attackers
 
-The file with addresses and private keys participated in the attack belonged to Ilya Lichtenstein. Lichtenstein and his wife, Heather R. Morgan, were charged with conspiracy to launder money by The U.S. Department of Justice (DOJ). However, identity of the thief still [remains unknown](https://www.wired.com/story/security-lapses-at-hacked-crypto-exchange-bitfinex/). 
+The file with addresses and private keys participated in the attack belonged to Ilya Lichtenstein. Lichtenstein and his wife, Heather R. Morgan, were charged with conspiracy to launder money by The U.S. Department of Justice (DOJ). However, [identity of the thief still remains unknown](https://www.wired.com/story/security-lapses-at-hacked-crypto-exchange-bitfinex/). 
 
-In February 1, 2022, the stolen funds were consolidated into one wallet address: [bc1qazcm763858nkj2dj986etajv6wquslv8uxwczt](https://slowmist.medium.com/analysis-of-the-3-6-billion-recovered-by-the-u-s-government-from-the-2016-bitifnex-hack-46abc296342d). These funds are currently under the custody Of the US government.
+On February 2, 2022, the stolen funds were consolidated into one wallet address: [bc1qazcm763858nkj2dj986etajv6wquslv8uxwczt](https://blog.merklescience.com/hacktrack/hack-track-bitfinex-hack-2016-recent-fund-movement-analysis). These funds are currently under the custody Of the US government.
 
 ## Losses
 
