fix formatting and categories

--- a/content/attacks/posts/2017-07-18-Parity.md
+++ b/content/attacks/posts/2017-07-18-Parity.md
@@ -1,7 +1,7 @@
 ﻿---
 date: 2017-07-18
-custodians: "Parity Technologies"
-categories:
+attacks/posts/custodians: "Parity Technologies"
+attacks/posts/categories:
     - "DeFi"
     - "Smart contracts"
 title: "Parity Multisig Wallet Hack Resulting in a $34 Million Loss"
@@ -32,8 +32,8 @@ The rest of the initially stolen funds were [laundered via TornadoCash](https://
 
 ## Timeline
 
-- **July 18, 2017 10:28:36 PM UTC:** The attacker executed [first transaction (call to initWallet())](https://etherscan.io/tx/0xff261a49c61861884d0509dac46ed67577a7d48cb73c2f51f149c0bf96b29660) to obtain exclusive ownership of the MultiSig Wallet.
-- **July 18, 2017 10:33:23 PM UTC:** The attacker executed [second transaction (call to execute())](https://etherscan.io/tx/0x0e0d16475d2ac6a4802437a35a21776e5c9b681a77fef1693b0badbb6afdb083) to transfer funds to his wallet.
+- **July 18, 2017 10:28:36 PM UTC:** The attacker executed [first transaction ( initWallet )](https://etherscan.io/tx/0xff261a49c61861884d0509dac46ed67577a7d48cb73c2f51f149c0bf96b29660) to obtain exclusive ownership of the MultiSig Wallet.
+- **July 18, 2017 10:33:23 PM UTC:** The attacker executed [second transaction ( execute )](https://etherscan.io/tx/0x0e0d16475d2ac6a4802437a35a21776e5c9b681a77fef1693b0badbb6afdb083) to transfer funds to his wallet.
 - **July 19, 2017 10:50:05 PM UTC:** The attacker [transferred](https://etherscan.io/tx/0x14a3ab7a4c88c6ebabb04fc2501c1a8e2e566c9464d72175ed92271995ed05b1) 70,000 ETH to 7 EOA addresses, 10,000 ETH each.
 - **July 19, 2017:** OpenZeppelin [published a report](https://blog.openzeppelin.com/on-the-parity-wallet-multisig-hack-405a8c12e8f7), asserting that their MultiSig Wallet is not impacted by the mentioned vulnerability.
 - **July 20, 2017:** Parity Technologies [published a post-mortem](https://www.parity.io/blog/the-multi-sig-hack-a-postmortem), mentioning that they had disabled the faulty code. 
