--- a/content/attacks/posts/2017-07-18-Parity.md
+++ b/content/attacks/posts/2017-07-18-Parity.md
@@ -9,7 +9,7 @@ title: "Parity Multisig Wallet Hack Resulting in a $34 Million Loss"
 
 ## Summary
 
-On July 19, 2017, Parity Technologies fell victim to a wallet hack. A vulnerability was discovered and [exploited in the Parity MultiSig Wallet version 1.5+](https://blog.aeternity.com/parity-multisig-wallet-hack-47cc507d964d), enabling the attacker to take control over the contracts and drain all its funds. The attack resulted in a loss of 153,037 ETH, equivalent to approximately $34 million from three ([one](https://etherscan.io/address/0x91efffb9c6cd3a66474688d0a48aa6ecfe515aa5), [two](https://etherscan.io/address/0x50126e8fcb9be29f83c6bbd913cc85b40eaf86fc), [three](https://etherscan.io/address/0xbec591de75b8699a3ba52f073428822d0bfc0d7e)) wallets.
+On July 19, 2017, Parity Technologies fell victim to a wallet hack. A vulnerability was discovered and [exploited in the Parity MultiSig Wallet version 1.5+](https://blog.aeternity.com/parity-multisig-wallet-hack-47cc507d964d), enabling the attacker to take control over the contracts and drain all their funds. The attack resulted in a loss of 153,037 ETH, equivalent to approximately $34 million from three ([one](https://etherscan.io/address/0x91efffb9c6cd3a66474688d0a48aa6ecfe515aa5), [two](https://etherscan.io/address/0x50126e8fcb9be29f83c6bbd913cc85b40eaf86fc), and [three](https://etherscan.io/address/0xbec591de75b8699a3ba52f073428822d0bfc0d7e)) wallets.
 
 ## Attackers
 
@@ -19,7 +19,7 @@ Attackers main address:
 
 ## Losses
 
-The attack led to a loss of 153,037 ETH, equivalent to roughly $34 million at the moment of hack. As of July 4, 2023, the attacker controls over $246 million as 125,995 ETH, which remain in the following addresses:
+The attack led to a loss of 153,037 ETH, equivalent to roughly $34 million at the time of the hack. As of July 4, 2023, the attacker controls over $246 million in 125,995 ETH, which remain at the following addresses:
 - 83,017 ETH in [0xb3764761e297d6f121e79c32a65829cd1ddb4d32](https://etherscan.io/address/0xb3764761e297d6f121e79c32a65829cd1ddb4d32)
 - 10,000 ETH in [0xef0683bef79b7ad85573415c781edfde8bec65b1](https://etherscan.io/address/0xef0683bef79b7ad85573415c781edfde8bec65b1)
 - ~9,984 ETH in [0x2d146aa23645950fdefbb23f636a5d1674fe1047](https://etherscan.io/address/0x2d146aa23645950fdefbb23f636a5d1674fe1047)
@@ -32,8 +32,8 @@ The rest of the initially stolen funds were [laundered via TornadoCash](https://
 
 ## Timeline
 
-- **July 18, 2017 10:28:36 PM UTC:** The attacker executed [first transaction ( initWallet )](https://etherscan.io/tx/0xff261a49c61861884d0509dac46ed67577a7d48cb73c2f51f149c0bf96b29660) to obtain exclusive ownership of the MultiSig Wallet.
-- **July 18, 2017 10:33:23 PM UTC:** The attacker executed [second transaction ( execute )](https://etherscan.io/tx/0x0e0d16475d2ac6a4802437a35a21776e5c9b681a77fef1693b0badbb6afdb083) to transfer funds to his wallet.
+- **July 18, 2017 10:28:36 PM UTC:** The attacker executed the [first transaction](https://etherscan.io/tx/0xff261a49c61861884d0509dac46ed67577a7d48cb73c2f51f149c0bf96b29660) to obtain exclusive ownership of the MultiSig Wallet.
+- **July 18, 2017 10:33:23 PM UTC:** The attacker executed a [second transaction](https://etherscan.io/tx/0x0e0d16475d2ac6a4802437a35a21776e5c9b681a77fef1693b0badbb6afdb083) to transfer funds to his wallet.
 - **July 19, 2017 10:50:05 PM UTC:** The attacker [transferred](https://etherscan.io/tx/0x14a3ab7a4c88c6ebabb04fc2501c1a8e2e566c9464d72175ed92271995ed05b1) 70,000 ETH to 7 EOA addresses, 10,000 ETH each.
 - **July 19, 2017:** OpenZeppelin [published a report](https://blog.openzeppelin.com/on-the-parity-wallet-multisig-hack-405a8c12e8f7), asserting that their MultiSig Wallet is not impacted by the mentioned vulnerability.
 - **July 20, 2017:** Parity Technologies [published a post-mortem](https://www.parity.io/blog/the-multi-sig-hack-a-postmortem), mentioning that they had disabled the faulty code. 
@@ -42,4 +42,4 @@ The rest of the initially stolen funds were [laundered via TornadoCash](https://
 
 **Poor Coding Practices:** The flaw was found in the "initWallet" function of the Parity Multisig Wallet, which can change the contract's owners. It lacked checks to prevent an attacker from calling it after the contract was initialized.
 
-**Delegated Call Use:** The use of delegatecall as a catch-all forwarding mechanism contributed to the vulnerability. This made all public functions from the library callable by anyone, including from the 'initWallet' function.
+**Delegated Call Use:** The use of delegatecall as a catch-all forwarding mechanism contributed to the vulnerability. This made all public functions from the library callable by anyone, including the 'initWallet' function.
