--- a/content/attacks/posts/2016-08-23-Krypton.md
+++ b/content/attacks/posts/2016-08-23-Krypton.md
@@ -1,6 +1,8 @@
 ---
 date: 2016-08-23
-attacks/posts/categories: 51%
+attacks/posts/target-entities: Krypton
+attacks/posts/entity-types: Coin
+attacks/posts/attack-types: 51%
 title: "Krypton (KR) suffers a 51% attack in August 2016"
 ---
 
