--- a/content/attacks/posts/2018-02-08-BitGrail.md
+++ b/content/attacks/posts/2018-02-08-BitGrail.md
@@ -1,7 +1,8 @@
 ---
 date: 2018-02-08
-attacks/posts/custodians: BitGrail
-attacks/posts/categories: Custodian
+attacks/posts/target-entities: BitGrail
+attacks/posts/entity-types: Exchange
+attacks/posts/attack-types: Custodian
 title: "BitGrail Hack Results in $170 Million Loss"
 
 ---
