--- a/content/attacks/posts/2021-12-05-Polygon.md
+++ b/content/attacks/posts/2021-12-05-Polygon.md
@@ -1,6 +1,8 @@
 ---
 date: 2021-12-05
-attacks/posts/categories: Protocol exploit
+attacks/posts/target-entities: Polygon
+attacks/posts/entity-types: Defi
+attacks/posts/attack-types: Protocol Exploit
 title: "Polygon hacked for over 800,000 MATIC"
 ---
 
