--- a/content/attacks/posts/2022-11-01-Deribit.md
+++ b/content/attacks/posts/2022-11-01-Deribit.md
@@ -1,6 +1,8 @@
 ---
 date: 2022-11-01
-categories: "Custodian"
+attacks/posts/custodians: Deribit
+attacks/posts/entity-types: Exchange
+attacks/posts/attack-types: Custodian
 title: "Deribit Hack: $28 Million Stolen in Hot Wallet Attack"
 ---
 
