--- a/content/attacks/posts/2012-07-16-BTC-e.md
+++ b/content/attacks/posts/2012-07-16-BTC-e.md
@@ -1,7 +1,8 @@
 ---
 date: 2012-07-16
-attacks/posts/custodians: BTC-e
-attacks/posts/categories: Custodian
+attacks/posts/target-entities: BTC-e
+attacks/posts/entity-types: Exchange
+attacks/posts/attack-types: Custodian
 title: BTC-e hacked, losing around 4,500 BTC
 ---
 
