--- a/content/attacks/posts/2015-01-04-Bitstamp.md
+++ b/content/attacks/posts/2015-01-04-Bitstamp.md
@@ -1,7 +1,8 @@
 ---
 date: 2015-01-04
-attacks/posts/custodians: Bitstamp
-attacks/posts/categories: Custodian
+attacks/posts/target-entities: Bitstamp
+attacks/posts/entity-types: Exchange
+attacks/posts/attack-types: Custodian
 title: Bitstamp hot wallet hacked for 18,866 BTC due to human error
 ---
 
