--- a/content/attacks/posts/2016-08-27-Shift.md
+++ b/content/attacks/posts/2016-08-27-Shift.md
@@ -1,6 +1,8 @@
 ---
 date: 2016-08-27
-attacks/posts/categories: 51%
+attacks/posts/target-entities: Shift
+attacks/posts/entity-types: Coin
+attacks/posts/attack-types: 51%
 title: "Shift (SHIFT) experiences a 51% attack in August 2016"
 ---
 
