--- a/content/attacks/posts/2018-10-24-Vertcoin.md
+++ b/content/attacks/posts/2018-10-24-Vertcoin.md
@@ -1,6 +1,8 @@
 ---
 date: 2018-10-24
-attacks/posts/categories: 51%
+attacks/posts/target-entities: Vertcoin
+attacks/posts/entity-types: Coin
+attacks/posts/attack-types: 51%
 title: Vertcoin suffers a 51% attack
 ---
 
