--- a/content/attacks/posts/2019-07-12-BITpoint.md
+++ b/content/attacks/posts/2019-07-12-BITpoint.md
@@ -1,6 +1,8 @@
 ---
 date: 2019-07-12
-attacks/posts/categories: Custodian
+attacks/posts/target-entities: BITPoint
+attacks/posts/entity-types: Exchange
+attacks/posts/attack-types: Custodian
 title: "BITPoint hacked - $28 million stolen"
 ---
 
