--- a/content/attacks/posts/2019-11-27-Upbit.md
+++ b/content/attacks/posts/2019-11-27-Upbit.md
@@ -1,7 +1,8 @@
 ---
 date: 2019-11-27
-custodians: Upbit
-categories: "Custodian"
+attacks/posts/target-entities: Upbit
+attacks/posts/entity-types: Exchange
+attacks/posts/attack-types: Custodian
 title: "Upbit Loses $49 Million in Cyberattack"
 ---
 
