--- a/content/attacks/posts/2021-08-18-Liquid.md
+++ b/content/attacks/posts/2021-08-18-Liquid.md
@@ -1,6 +1,8 @@
 ---
 date: 2021-08-18
-categories: "Custodian"
+attacks/posts/target-entities: Liquid
+attacks/posts/entity-types: Exchange
+attacks/posts/attack-types: Custodian
 title: "Liquid Exchange Hacked for $97 Million"
 ---
 
