--- a/content/attacks/posts/2023-05-29-Qubit.md
+++ b/content/attacks/posts/2023-05-29-Qubit.md
@@ -1,6 +1,8 @@
 ---
 date: 2022-03-23
-attacks/posts/categories: Bridge Hack
+attacks/posts/target-entities: Qubit Finance
+attacks/posts/entity-types: DeFi
+attacks/posts/attack-types: Bridge Hack
 title: "Hackers Breach Qubit Finance Platform, Stealing $80 Million"
 ---
 
