--- a/content/attacks/posts/2016-08-02-Bitfinex.md
+++ b/content/attacks/posts/2016-08-02-Bitfinex.md
@@ -1,38 +1,37 @@
 ---
-date: 2016-08-02
-attacks/posts/custodians: "Bitfinex"
-attacks/posts/categories: "Custodian"
-title: "Bitfinex Hack Led To 119,756 Bitcoin Stolen"
+Date: 2016-08-02
+Type of attack: "Custodian"
+Target entity: "Bitfinex"
+Type of entity: "Exchange"
+Title: "Bitfinex Hack Led To 119,756 Bitcoin Stolen"
 ---
 
 ## Summary
 
-On August 2, 2016, Bitfinex, a prominent cryptocurrency exchange, experienced a security breach. A single wallet received 2,072 approved transactions from users' segregated wallets. During the attack, approxiamtely 120,000 bitcoins were stolen, with an estimated value of US$72 million at the time. Shortly after the incident, the trading price of Bitcoin experienced a [20% decline](https://www.coindesk.com/markets/2016/08/02/bitcoin-drops-nearly-20-as-exchange-hack-amplifies-price-decline/) — from $600 to $400, resulting in the value of the stolen Bitcoin dropping to almost US$58 million. Upon being alerted about the breach, Bitfinex immediately ceased all Bitcoin withdrawals and trading operations and announced its active pursuit to trace and apprehend the perpetrators responsible for the hack in collaboration with global law enforcement agencies and other private sector actors. All exchange customers, regardless of whether their accounts were compromised, encountered a 36% reduction in their account balances and received BFX tokens corresponding to their losses. Despite implementing [BitGo's multiple-signature security system](https://en.wikipedia.org/wiki/2016_Bitfinex_hack) to safeguard the funds, the hack still occurred.
+On August 2, 2016, Bitfinex, a prominent cryptocurrency exchange, experienced a security breach resulting in the theft of approximately 120,000 bitcoins (US$72 million at the time). This incident led to a [20% decline](https://www.coindesk.com/markets/2016/08/02/bitcoin-drops-nearly-20-as-exchange-hack-amplifies-price-decline/) in the trading price of Bitcoin — from US$600 to US$400, reducing the value of the stolen Bitcoins to nearly US$58 million. In response to the breach, Bitfinex immediately halted all Bitcoin withdrawals and trading activities. The exchange collaborated with law enforcement agencies and other entities to investigate and apprehend the hackers. As a result of the breach, all Bitfinex customers experienced a 36% reduction in their account balances and were compensated with BFX tokens proportional to their losses. Despite employing [BitGo's multiple-signature security system](https://en.wikipedia.org/wiki/2016_Bitfinex_hack), the hack still occurred.
 
-In February 2022, the US government successfully recovered and seized a portion of the stolen bitcoins, valued at US$3.6 billion at the time. This was achieved by decrypting a file that contained addresses and private keys linked to the stolen funds.
+In February 2022, the US government achieved a successful recovery and seizure of a portion of the stolen bitcoins. These bitcoins were valued at US$3.6 billion at the time. The recovery was made possible by decrypting a file that contained the addresses and private keys associated with the stolen funds.
 
 ## Attackers
 
-The file with addresses and private keys participated in the attack belonged to Ilya Lichtenstein. Lichtenstein and his wife, Heather R. Morgan, were charged with conspiracy to launder money by The U.S. Department of Justice (DOJ). However, [identity of the thief still remains unknown](https://www.wired.com/story/security-lapses-at-hacked-crypto-exchange-bitfinex/). 
+The file containing addresses and private keys involved in the attack was associated with Ilya Lichtenstein. Both Lichtenstein and his wife, Heather R. Morgan, were charged with conspiracy to launder money by the U.S. Department of Justice (DOJ). However, [the identity of the actual thief remains unknown](https://www.wired.com/story/security-lapses-at-hacked-crypto-exchange-bitfinex/).
 
-On February 2, 2022, the stolen funds were consolidated into one wallet address: [bc1qazcm763858nkj2dj986etajv6wquslv8uxwczt](https://blog.merklescience.com/hacktrack/hack-track-bitfinex-hack-2016-recent-fund-movement-analysis). These funds are currently under the custody Of the US government.
+The stolen funds were consolidated into a single wallet address, [bc1qazcm763858nkj2dj986etajv6wquslv8uxwczt](https://blog.merklescience.com/hacktrack/hack-track-bitfinex-hack-2016-recent-fund-movement-analysis), on February 2, 2022. Presently, these funds are under the custody of the US government. 
 
 ## Losses
 
-In the space of barely more than three hours the hackers managed to steal 119,756 BTC worth about US$72 million to date. The hack accounted for about [0.75% of all bitcoins](https://www.theguardian.com/technology/2016/aug/07/bitfinex-exchange-customers-receive-36-percent-loss-tokens) in circulation at the moment.
+Within three hours, the hackers successfully stole approximately 119,756 BTC, equivalent to around US$72 million. This amount accounted for roughly [0.75% of the total bitcoins](https://www.theguardian.com/technology/2016/aug/07/bitfinex-exchange-customers-receive-36-percent-loss-tokens) in circulation at that time.
 
 ## Timeline
 
-- **August 2, 2016:** Bitfinex [reports](https://blog.bitfinex.com/announcements/security-breach/) it has discovered a security breach that requires a halt to all trading on its platform. The exchange also claimed that Bitcoins belonging to some of its users are stolen.
-- **August 6, 2016, 3:51 PM UTC:** Bitfinex announced that customers will be [compensated for their losses](https://blog.bitfinex.com/announcements/bitfinex-interim-update/) through the issuance of a token called BFX, which represents the discrete losses experienced by each customer.
-- **August 10, 2016, 2:01 PM UTC:** Bitfinex announced [the resumption of trading and restoration of service](https://blog.bitfinex.com/announcements/site-update/) after the hack, with additional security measures.
-- **April 3, 2017:** Bitfinex announced [full recovery](https://www.bitfinex.com/posts/198) from the hack by redeeming 100% of all issued and outstanding BFX tokens.
-- **February 25, 2019:** Bitfinex announced that stolen [27.66270285 BTC](https://medium.com/bitfinex/bitcoins-returned-to-bitfinex-by-u-s-government-51fe84e8bb12) were received from the U.S. government as the result of U.S. law enforcement efforts.
-- **August 4, 2020:** Bitfinex [offered US$400 million reward](https://www.bitfinex.com/posts/494) for information leading to the identification of hackers involved in the attack. The reward was also offered to the hackers themselves if they had returned the stolen property.
-- **December 14, 2021:** Bitfinex [recovered stolen 6.51458211 BTC](https://www.bitfinex.com/posts/746) in collaboration with Poloniex, a digital token exchange.
-- **February 1, 2022:** 94,643.29 BTC, more than 79% of the stolen funds, [were transferred and consolidated](https://news.bitcoin.com/3-6-billion-in-bitcoin-from-the-2016-bitfinex-hack-consolidates-into-a-single-address/) into a single wallet after 23 transactions.
-- **February 7, 2022:** U.S. Department of Justice [recovered](https://www.justice.gov/opa/press-release/file/1470186/download) approximately 94,636 stolen BTC, worth US$3.629 billion at the moment.
+- **August 2, 2016:** Bitfinex [reports a security breach](https://blog.bitfinex.com/announcements/security-breach/), resulting in a temporary halt to all trading. Users' Bitcoins are reported stolen.
+- **August 6, 2016, 3:51 PM UTC:** Bitfinex announces [compensation](https://blog.bitfinex.com/announcements/bitfinex-interim-update/) for customers' losses through the issuance of BFX tokens.
+- **August 10, 2016, 2:01 PM UTC:** Bitfinex [resumes trading and restores services](https://blog.bitfinex.com/announcements/site-update/), implementing additional security measures.
+- **April 3, 2017:** Bitfinex announces [full recovery](https://www.bitfinex.com/posts/198) from the hack, redeeming all issued BFX tokens.
+- **August 4, 2020:** Bitfinex offers a [US$400 million reward](https://www.bitfinex.com/posts/494) for information leading to the identification of the hackers, including the possibility of a reward for the return of stolen property.
+- **February 1, 2022:** 94,643.29 BTC, over 79% of the stolen funds, [are consolidated into a single wallet](https://news.bitcoin.com/3-6-billion-in-bitcoin-from-the-2016-bitfinex-hack-consolidates-into-a-single-address/).
+- **February 7, 2022:** The U.S. Department of Justice [recovers](https://www.justice.gov/opa/press-release/file/1470186/download) approximately 94,636 stolen BTC, valued at US$3.629 billion at that time.
 
 ## Security Failure Causes
 
-**Violation of the Security Protocol:** According to OCCRP report, Bitfinex [failed](https://www.occrp.org/en/blog/17670-confidential-report-flags-bitfinex-security-lapses-in-huge-2016-hack) to implement operational, financial, and technological controls proposed by its digital security partner Bitgo. Critical errors were made, such as storing two out of three security keys on the same device, providing full access to Bitfinex's systems and security tokens. By compromising that single device, hackers were able to immediately bypass the BitGo withdrawal limits and drain the wallet. The absence of basic security measures, including server activity logging and a withdrawal whitelist, further contributed to the hack. Bitfinex, however, disputed the report's findings and blamed negligence by other counterparties.
+**Violation of the Security Protocol:** Bitfinex [neglected](https://www.occrp.org/en/blog/17670-confidential-report-flags-bitfinex-security-lapses-in-huge-2016-hack) to incorporate recommended operational, financial, and technological controls proposed by its digital security partner, Bitgo, as revealed by an OCCRP report. This lapse resulted in critical errors, including the storage of two security keys on a single device, granting unrestricted access to Bitfinex's systems and security tokens. Exploiting this vulnerability, hackers successfully circumvented BitGo's withdrawal limits and swiftly depleted the wallet. The absence of essential security measures, such as server activity logging and a withdrawal whitelist, further exacerbated the susceptibility that led to the breach.
